--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,10 +5,15 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  
 }
 
 img {
   width: 600px;
+  
 }
 
 button {
@@ -25,3 +30,82 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+button{
+  padding: 8px 16px;
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+}
+
+
+ul{
+  display: flex;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
+}
+
+/*.header .left-links{
+  display: flex;
+}
+
+.header .left-links>li{
+  margin-right: 20px;
+}
+
+.header .right-links{
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+}
+
+.header .right-links>li{
+  margin-right: 30px;
+}*/
+
+.content{
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.footer{
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+  background-color: #eeeeee;
+}
+
+/*.footer .left-links{
+  display: flex;
+  
+}
+
+.footer .left-links>li{
+  margin-right: 15px;
+}
+
+.footer .right-links{
+  display: flex;
+  margin-left: auto;
+  align-items: center;
+}
+
+.footer .right-links>li{
+  margin-right: 30px;
+}*/
+
+a{
+  text-decoration: none;
+  color: rgb(87, 85, 85);
+}
+
+
